# shiki-organizer

./: CHANGELOG.md  README.md  pyproject.toml  ui_to_py.sh
scripts/: ui_to_py.sh
shiki_organizer/: __main__.py  actions.py  cli.py  client.py  database.py  datetime.py  formatter.py  formatting.py  model.py  paths.py  settings.py  task.py  tasks.py  utilities.py
shiki_organizer/cli/: __main__.py  add_command.py  datetime.py  del_command.py  do_command.py  edit_command.py  formatter.py  formatting.py  interval.py  main.py  repository.py  style.py  table.py  task.py  tree.py
shiki_organizer/commands/: add_command.py  del_command.py  do_command.py  edit_command.py  list_command.py  overview_command.py  start_command.py  stop_command.py
shiki_organizer/gui/: __main__.py  interval_tab.py  repository_tab.py  settings_tab.py  task.py  tasks_tab.py
shiki_organizer/gui/ui/: interval_add.py  interval_add.ui  interval_modify.py  interval_modify.ui  interval_tab.py  interval_tab.ui  main_window.py  main_window.ui  repository_add.py  repository_add.ui  repository_tab.py  repository_tab.ui  settings_tab.py  settings_tab.ui  task_add.py  task_add.ui  tasks_tab.py  tasks_tab.ui
shiki_organizer/models/: database.py  tag.py  task.py  task_table.py  tasks.py
shiki_organizer/tui/: __main__.py  main.py
shiki_organizer/views/: main_windows.py  task_add.py  task_tab.py
shiki_organizer/views/ui/: main_window.py  main_window.ui  task_add.py  task_add.ui  tasks_tab.py  tasks_tab.ui
