[tool.poetry]
name = "shiki-organizer"
version = "0.9.0"
description = "App for task management and time tracking"
authors = ["Niko Honu <nikohonu@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "shiki_organizer"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
appdirs = "^1.4.4"
peewee = "^3.15.3"
pyside6 = "^6.4.0.1"
pendulum = "^2.1.2"
click = "^8.1.3"
pynvim = "^0.4.3"
colorama = "^0.4.6"
textual = {extras = ["dev"], version = "^0.10.1"}
rich = "^13.3.1"

[tool.poetry.scripts]
shiki-organizer = "shiki_organizer.__main__:main"
so = "shiki_organizer.cli.task:main"
so-tui = "shiki_organizer.tui.__main__:main"
so-interval = "shiki_organizer.cli.interval:main"
so-repository = "shiki_organizer.cli.repository:main"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
