[tool.poetry]
name = "shiki-organizer"
version = "0.9.0"
description = "A package of tools for creating to-do lists and time management program"
authors = ["Niko Honu <nikohonu@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "shiki_organizer"}]

[tool.poetry.dependencies]
python = "^3.10"
appdirs = "^1.4.4"
peewee = "^3.15.3"
pendulum = "^2.1.2"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
pynvim = "^0.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
