[tool.poetry]
name = "shiki-organizer"
version = "v11"
description = "A program that aims to organize the user's life. Currently, it includes a to-do list and a time tracker."
authors = ["Niko Honu <nikohonu@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "shiki_organizer" }]

[tool.poetry.dependencies]
python = "^3.10"
appdirs = "^1.4.4"
peewee = "^3.15.3"
pendulum = "^2.1.2"
click = "^8.1.3"
rich = "^13.3.1"
textual = { extras = ["dev"], version = "^0.11.1" }
click-aliases = "^1.0.1"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
pynvim = "^0.4.3"
mypy = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
so = "shiki_organizer.__main__:cli_main"
so-tui = "shiki_organizer.__main__:tui_main"

[tool.isort]
profile = "black"
